[package]
name = "herbicalc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.0" }
bevy_egui = "0.21.0"
itertools = "0.11.0"
regex = "1.9.1"
pecs = { path = "vendor/pecs", version = "0.4.0" }
futures-lite = "1.13.0"
chrono = "0.4.26"
serde = { version = "1.0.174", features = ["derive"] }
serde_json = "1.0.103"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
